# T4C-Client-Multiplateformes

./: Readme.md
decode/: Convertisseur.dev  Makefile  Makefile.win  convertisseur.cpp  convertisseur.h  decode.cpp  extraction_maps.cpp  extraction_maps_conv.cpp  extraction_sons.cpp  extraction_sprites.cpp  id_list.txt.txt  path_SDL.sh  save_bmp.cpp  vsfkey.h
decode/Game Files/: cavernmap.map  dungeonmap.map  maintorch.rgb  otherplayertorch.rgb  snmci._  t4cgamefile12.vsf  t4cgamefile13.vsf  t4cgamefile14.vsf  t4cgamefile2.vsf  t4cgamefile4.vsf  t4cgamefile5.vsf  t4cgamefile7.vsf  t4cgamefile9.vsf  (+3 more)
decode/TnC_dev/: CMakeLists.txt  MAPI  MAPInterface.dev  MAPInterface.layout  Makefile  Makefile.win  Makefile_map  Makefile_npc  NPCList.txt  PALETTES_LIST.txt  README.md  SPRITES_LIST.txt  classfolders.dcf  modif_sprites.txt  test_NPCManager  test_NPCManager.dev  test_mapinterface.cpp  test_npcmanager.cpp
decode/TnC_dev/FontManager/: fontmanager.cpp  fontmanager.h
decode/TnC_dev/MapInterface/: mapi_full_redraw.cpp  mapi_get_map.cpp  mapi_move_map.cpp  mapinterface.cpp  mapinterface.h
decode/TnC_dev/NPCManager/: npc_ajout.cpp  npc_config.cpp  npc_draw.cpp  npcmanager.cpp  npcmanager.h
decode/TnC_dev/TextManager/: textmanager.cpp  textmanager.h
decode/TnC_dev/VSFInterface/: vsfi_create_hash.cpp  vsfi_hash.cpp  vsfi_indexage_pal.cpp  vsfi_indexage_rep.cpp  vsfi_indexage_spr.cpp  vsfi_palettes.cpp  vsfi_read_sprite.cpp  vsfi_save_bmp.cpp  vsfi_sprites.cpp  vsfinterface.cpp  vsfinterface.h  vsfkey.h
decode/TnC_dev/fonts/: font_trebuchet_12.txt  sans_bold_12.txt
(+19 files in other folders)
